--- a/Animal encontrado Perro 1.html
+++ b/Animal encontrado Perro 1.html
@@ -36,9 +36,9 @@
      </aling center>
     </div>
     <section class="footer2">
-      <a href="Animales perdidos vista deck.html">Cancelar
+      <a href="index.html">Cancelar
       </a>
-      <a href="Animales perdidos vista deck.html">Listo!
+      <a href="index.html">Listo!
       </a>
     </section>
   </body>
