--- a/Animal perdido.html
+++ b/Animal perdido.html
@@ -10,7 +10,7 @@
     <div class="encabezado">
       <div class="title">Animal perdido</div>
       <img class="logo" 
-          src="file://E:/materiales curso coderhouse/VS/animales perdidos logo.jpeg"
+          src="animales perdidos logo.jpeg"
           width="400"
           height="200"
       />
@@ -23,7 +23,7 @@
       </div>
       <div>
         <p>Fecha:<input type="date" name="" id=""></p>
-        <img src="file:///E:/materiales curso coderhouse\VS/maps.png" alt="luna" width="400" height="400">
+        <img src="maps.png" alt="luna" width="400" height="400">
         <p>Se perdio entre las calles<input type="" name="" id=""></p>
       </div>
     </section>
