--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -8,26 +8,20 @@
   </head>
   <body>
     <div class="encabezado">
-      <div class="title">Animal</div>
+      <div class="title">Sobre nuestro objetivo</div>
       <img class="logo" 
           src="animales perdidos logo.jpeg"
           width="400"
-          height="200"
+          height="300"
       />
       <input type="search" name="" id="" placeholder="Buscar">
     </div>
-     <P>Muchas gracias por encontrar este animal, confirma si es este y ubica donde lo encontraste y si lo tienes tu o no.</P>
+     <P>Nuestro objetivo es que las mascotas que se escapen de sus dueños puedan volver con ellos, tratamos de mejorar dia y dia y nos gustaria sugerencias y opiniones por las redes, muchas gracias por estar aca y aportar y a las familias
+     </P>
     <section class="animal-encontrado">
       <div>
         <p><input type="checkbox" name="" id=""> Es este el animal encontrado?</p>
-        <img src="./fotos/hipertextual-que-ningun-animal-tiene-tres-patas-2019533984.jpg" alt="luna" width="400" height="400">
-      </div>
-      <div>
-        <p> Fecha:<input type="date" name="" id="">
-        <input type="checkbox" name="" id=""> Lo tiene usted?</p>
-        <p>Donde lo vio?</p>
-        <img src="maps.png" alt="luna" width="300" height="300">
-        <p>fue encontrado entre las calles<input type="" name="" id=""></p>
+        <img src="./fotos/images4.jfif" alt="luna" width="400" height="400">
       </div>
     </section>
     <div class="down">
