--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Animales perdidos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   </head>
   <body>
@@ -23,76 +24,76 @@
     </div>
     <section class="mascotas">
       <a href="Animal encontrado mimi.html">
-       <div><img src="file:///E:/animales perdidos fotos/IMG_20220106_183933.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/IMG_20220106_183933.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado luna.html">
-       <div><img src="file:///E:/animales perdidos fotos/IMG_20220106_184145.jpg" alt="luna" width="100" height="100"></div>
+       <div><img src="./fotos/IMG_20220106_184145.jpg" alt="luna" class="img-animal" ></div>
       </a>
       <a href="Animal encontrado aron stone.html">
-       <div><img src="file:///E:/animales perdidos fotos/IMG_20220106_184108_1.jpg" alt="aron stone" width="100" height="100"></div>
+       <div><img src="./fotos/IMG_20220106_184108_1.jpg" alt="aron stone" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 1.html">
-       <div><img src="file:///E:/animales perdidos fotos/PERROS1-2-195x195.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/PERROS1-2-195x195.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 2.html">
-       <div><img src="file:///E:/animales perdidos fotos/f.elconfidencial.com_original_216_69f_5e8_21669f5e8373711026a16d4b8366a6b7.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/f.elconfidencial.com_original_216_69f_5e8_21669f5e8373711026a16d4b8366a6b7.jpg" alt="mimi" class="img-animal" ></div>
       </a>
       <a href="Animal encontrado Perro 3.html">
-       <div><img src="file:///E:/animales perdidos fotos/images (2).jfif" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/images (2).jfif" alt="mimi" class="img-animal" ></div>
       </a>
       <a href="Animal encontrado Perro 4.html">
-       <div><img src="file:///E:/animales perdidos fotos/mask-dog-kMBI--1200x630@abc.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/mask-dog-kMBI--1200x630@abc.jpg" alt="mimi" class="img-animal" ></div>
       </a>
       <a href="Animal encontrado Gato1.html">
-       <div><img src="file:///E:/animales perdidos fotos/23815272238_77f1b41a56_k.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/23815272238_77f1b41a56_k.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado no recuerdo el nombre jajjajaja.html">
-       <div><img src="file:///E:/animales perdidos fotos/hipertextual-que-ningun-animal-tiene-tres-patas-2019533984.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/hipertextual-que-ningun-animal-tiene-tres-patas-2019533984.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Gato2.html">
-       <div><img src="file:///E:/animales perdidos fotos/5ffdfc1c45ba4_900.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/5ffdfc1c45ba4_900.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 5.html">
-       <div><img src="file:///E:/animales perdidos fotos/75OKWY75P5FIJOT752OWRMMGXM.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/75OKWY75P5FIJOT752OWRMMGXM.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 6.html">
-       <div><img src="file:///E:/animales perdidos fotos/animales_en_ingles.jpeg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/animales_en_ingles.jpeg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 2.html">
-       <div><img src="file:///E:/animales perdidos fotos/f.elconfidencial.com_original_216_69f_5e8_21669f5e8373711026a16d4b8366a6b7.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/f.elconfidencial.com_original_216_69f_5e8_21669f5e8373711026a16d4b8366a6b7.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 7.html">
-       <div><img src="file:///E:/animales perdidos fotos/desktop_2c81aefd-c8dc-459a-a640-0ec6080866ae.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/desktop_2c81aefd-c8dc-459a-a640-0ec6080866ae.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 8.html">
-       <div><img src="file:///E:/animales perdidos fotos/dog.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/dog.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Gato3.html">
-       <div><img src="file:///E:/animales perdidos fotos/gato-e1556582412929.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/gato-e1556582412929.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Gato4.html">
-       <div><img src="file:///E:/animales perdidos fotos/la-constitucion-suiza-busca-incorporar___uVFeABRZ0_1256x620__2.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/la-constitucion-suiza-busca-incorporar___uVFeABRZ0_1256x620__2.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 9.html">
-       <div><img src="file:///E:/animales perdidos fotos/viviparos-perro-min-e1475101801179.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/viviparos-perro-min-e1475101801179.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Conejo.html">
-       <div><img src="file:///E:/animales perdidos fotos/840_560.jpg" alt="mimi" width="100" height="100"></div>
+       <div><img src="./fotos/840_560.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 10.html">
-       <div><img src="file:///E:/animales perdidos fotos/Animales-domésticos.jpg" alt="jamon" width="100" height="100"></div>
+       <div><img src="./fotos/Animales-domésticos.jpg" alt="jamon" class="img-animal"></div>
       </a>
       <a href="Animal encontrado hamster.html">
-       <div><img src="file:///E:/animales perdidos fotos/descargar.jfif" alt="queso" width="100" height="100"></div>
+       <div><img src="./fotos/descargar.jfif" alt="queso" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Gato5.html">
-        <div><img src="file:///E:/animales perdidos fotos/images6.jfif" alt="luna" width="100" height="100"></div>
+        <div><img src="./fotos/images6.jfif" alt="luna" class="img-animal"></div>
       </a> 
       <a href="Animal encontrado Gato6.html">
-       <div><img src="file:///E:/animales perdidos fotos/images5.jfif" alt="olivia" width="100" height="100"></div>
+       <div><img src="./fotos/images5.jfif" alt="olivia" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Gato7.html"> 
-        <div><img src="file:///E:/animales perdidos fotos/images4.jfif" alt="hija de mimi" width="100" height="100"></div>
+        <div><img src="./fotos/images4.jfif" alt="hija de mimi" class="img-animal"></div>
       </a>
     </section>
     <div class="down">
