--- a/Animal encontrado Perro 10.html
+++ b/Animal encontrado Perro 10.html
@@ -10,7 +10,7 @@
     <div class="encabezado">
       <div class="title">animal: perro 10</div>
       <img class="logo" 
-          src="file://E:/materiales curso coderhouse/VS/animales perdidos logo.jpeg"
+          src="animales perdidos logo.jpeg"
           width="400"
           height="200"
       />
@@ -20,13 +20,13 @@
     <section class="animal-encontrado">
       <div>
         <p><input type="checkbox" name="" id=""> Es este el animal encontrado?</p>
-        <img src="file:///E:/animales perdidos fotos/Animales-domésticos.jpg" alt="luna" width="400" height="400">
+        <img src="./fotos/Animales-domésticos.jpg" alt="luna" width="400" height="400">
       </div>
       <div>
         <p> Fecha:<input type="date" name="" id="">
         <input type="checkbox" name="" id=""> Lo tiene usted?</p>
         <p>Donde lo vio?</p>
-        <img src="file:///E:/materiales curso coderhouse\VS/maps.png" alt="luna" width="300" height="300">
+        <img src="maps.png" alt="luna" width="300" height="300">
         <p>fue encontrado entre las calles<input type="" name="" id=""></p>
       </div>
     </section>
