--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
@@ -11,12 +12,13 @@
   <body>
     <div class="encabezado">
       <div class="title">Animales perdidos</div>
-      <img class="logo" 
-          src="file://E:/materiales curso coderhouse/VS/animales perdidos logo.jpeg"
-          width="500"
-          height="300"
+      <img class="logo shadow-lg p-3 mb-5 bg-body rounded"
+          src="animales perdidos logo.jpeg"
       />
-      <input type="search" name="" id="" placeholder="Buscar">
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+        <button class="btn btn-outline-success" type="submit">Buscar</button>
+      </form>
     </div>
     <P>Si reconoces algún animal por favor comuníquelo que se lo comunicaremos al dueño, ubica zona donde reconociste al animal y especifica cual de las siguientes imagenes</P>
     <div class="left"> 
@@ -97,28 +99,37 @@
       </a>
     </section>
     <div class="down">
-      <input type="button" value="Pagina anterior">
-      <input type="button" value="Pagina siguiente">
-      <a href="Animal perdido.html">Perdiste tu animal?
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="#">Pagina anterior</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Pagina siguiente</a></li>
+        </ul>
+      </nav>
+      <a href="Animal perdido.html">
+      <button type="button" class="btn btn-dark">Perdiste tu animal?</button>
       </a>
     </div>
     <section class="footer">
       <a href="https://telegram.download-program.ru">
-        <img src="file://C:\Users\Mariano\Downloads\telegram.png" width="70" height="90">
+        <img src="./logos/telegram.png" width="70" height="90">
       </a>
       <a href="https://www.instagram.com">
-        <img src="file://C:\Users\Mariano\Downloads\instagram.jfif" width="70" height="90">
+        <img src="./logos/instagram.jpg" width="70" height="90">
       </a>
       <a href="https://m.facebook.com/home.php?_rdr">
-        <img src="file://C:\Users\Mariano\Downloads\facebook.png" width="70" height="90">
+        <img src="./logos/facebook.png" width="70" height="90">
       </a>
       <a href="https://web.whatsapp.com">
-        <img src="file://C:\Users\Mariano\Downloads\whatsapp.jfif" width="70" height="90">
+        <img src="./logos/what.jpg" width="70" height="90">
       </a> 
       <div>
       <P>Animales perdidos:</P>
       <P> Ayuda a los animales que has visto recientemente para que vuelvan a los dueños</P>
       </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
