--- a/index.html
+++ b/index.html
@@ -1,44 +1,65 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <title>Animales perdidos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Animales perdidos</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  </head>
-  <body>
+    <meta name="animales perdidos" content="Perdi mi animal animales perdidos">
+    <meta name="" content="HTML, ASP, JS, META, animales perdidos">
+    <link rel="stylesheet" href="estilos/compilado.css" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><B><FONT COLOR="white">Animales perdidos</FONT></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="Animal perdido.html"><B><FONT COLOR="white">¿Perdiste tu mascota?</FONT></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Sobre nosotros.html"><B><FONT COLOR="white">Sobre nosotros</FONT></a>
+            </li>
+          </ul>
+           <form class="d-flex">
+            <input class="form-control me-2" type="search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+           </form>
+        </div>
+      </div>
+    </nav>
+   </head>
+   <body>
     <div class="encabezado">
-      <div class="title">Animales perdidos</div>
       <img class="logo shadow-lg p-3 mb-5 bg-body rounded"
-          src="animales perdidos logo.jpeg"
+          src="fotos/logolostpets.PNG"
       />
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-        <button class="btn btn-outline-success" type="submit">Buscar</button>
-      </form>
     </div>
-    <P>Si reconoces algún animal por favor comuníquelo que se lo comunicaremos al dueño, ubica zona donde reconociste al animal y especifica cual de las siguientes imagenes</P>
+    <p class="texto-blanco"><B><FONT COLOR="white">Si reconocés alguna mascota por favor avisanos que se lo informaremos al dueño, después ubicá la zona donde identificaste a la mascota.</FONT></a></P>
     <div class="left"> 
-      <p>Imagenes de animales perdidos actuales</p>
+      <p><B><FONT COLOR="white"</FONT></a></p>
     </div>
     <section class="mascotas">
       <a href="Animal encontrado mimi.html">
        <div><img src="./fotos/IMG_20220106_183933.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado luna.html">
-       <div><img src="./fotos/IMG_20220106_184145.jpg" alt="luna" class="img-animal" ></div>
+       <div><img src="./fotos/Luna.jpg" alt="luna" class="img-animal" ></div>
       </a>
       <a href="Animal encontrado aron stone.html">
        <div><img src="./fotos/IMG_20220106_184108_1.jpg" alt="aron stone" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 1.html">
-       <div><img src="./fotos/PERROS1-2-195x195.jpg" alt="mimi" class="img-animal"></div>
+       <div><img src="./fotos/Jerry.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 2.html">
-       <div><img src="./fotos/f.elconfidencial.com_original_216_69f_5e8_21669f5e8373711026a16d4b8366a6b7.jpg" alt="mimi" class="img-animal" ></div>
+       <div><img src="./fotos/hijademimi.jpg" alt="mimi" class="img-animal" ></div>
       </a>
       <a href="Animal encontrado Perro 3.html">
        <div><img src="./fotos/images (2).jfif" alt="mimi" class="img-animal" ></div>
@@ -47,7 +68,7 @@
        <div><img src="./fotos/mask-dog-kMBI--1200x630@abc.jpg" alt="mimi" class="img-animal" ></div>
       </a>
       <a href="Animal encontrado Gato1.html">
-       <div><img src="./fotos/23815272238_77f1b41a56_k.jpg" alt="mimi" class="img-animal"></div>
+       <div><img src="./fotos/gatomalafoto.jpeg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado no recuerdo el nombre jajjajaja.html">
        <div><img src="./fotos/hipertextual-que-ningun-animal-tiene-tres-patas-2019533984.jpg" alt="mimi" class="img-animal"></div>
@@ -71,7 +92,7 @@
        <div><img src="./fotos/dog.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Gato3.html">
-       <div><img src="./fotos/gato-e1556582412929.jpg" alt="mimi" class="img-animal"></div>
+       <div><img src="./fotos/noluna.jpeg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Gato4.html">
        <div><img src="./fotos/la-constitucion-suiza-busca-incorporar___uVFeABRZ0_1256x620__2.jpg" alt="mimi" class="img-animal"></div>
@@ -83,7 +104,7 @@
        <div><img src="./fotos/840_560.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 10.html">
-       <div><img src="./fotos/Animales-domésticos.jpg" alt="jamon" class="img-animal"></div>
+       <div><img src="./fotos/3perros.jpg" alt="jamon" class="img-animal"></div>
       </a>
       <a href="Animal encontrado hamster.html">
        <div><img src="./fotos/descargar.jfif" alt="queso" class="img-animal"></div>
@@ -95,39 +116,34 @@
        <div><img src="./fotos/images5.jfif" alt="olivia" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Gato7.html"> 
-        <div><img src="./fotos/images4.jfif" alt="hija de mimi" class="img-animal"></div>
+        <div><img src="./fotos/Gato moño.jpeg" alt="hija de mimi" class="img-animal"></div>
       </a>
     </section>
     <div class="down">
-      <nav aria-label="Page navigation example">
         <ul class="pagination">
-          <li class="page-item"><a class="page-link" href="#">Pagina anterior</a></li>
+          <li class="page-item"><a class="page-link" href="#">Página anterior</a></li>
           <li class="page-item"><a class="page-link" href="#">1</a></li>
           <li class="page-item"><a class="page-link" href="#">2</a></li>
           <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">Pagina siguiente</a></li>
+          <li class="page-item"><a class="page-link" href="#">Página siguiente</a></li>
         </ul>
-      </nav>
-      <a href="Animal perdido.html">
-      <button type="button" class="btn btn-dark">Perdiste tu animal?</button>
-      </a>
     </div>
-    <section class="footer">
+    <section class="footer4">
       <a href="https://telegram.download-program.ru">
-        <img src="./logos/telegram.png" width="70" height="90">
+        <img src="./logos/telegram-brands.svg" width="90" height="90">
       </a>
       <a href="https://www.instagram.com">
-        <img src="./logos/instagram.jpg" width="70" height="90">
+        <img src="./logos/instagram-brands.svg" width="90" height="90">
       </a>
       <a href="https://m.facebook.com/home.php?_rdr">
-        <img src="./logos/facebook.png" width="70" height="90">
+        <img src="./logos/facebook-brands.svg" width="90" height="90">
       </a>
       <a href="https://web.whatsapp.com">
-        <img src="./logos/what.jpg" width="70" height="90">
+        <img src="./logos/whatsapp-brands.svg" width="90" height="90">
       </a> 
-      <div>
-      <P>Animales perdidos:</P>
-      <P> Ayuda a los animales que has visto recientemente para que vuelvan a los dueños</P>
+      <div class="footer3">
+        <P>Mascotas perdidas:</P>
+        <P>Ayudá a las mascotas que has visto recientemente para que vuelvan con sus dueños.</P>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
