--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -1,39 +1,54 @@
+<!DOCTYPE html>
 <html lang="es">
   <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Animales perdidos</title>
-  
-  </head>
+    <meta name="animales perdidos" content="Perdi mi animal animales perdidos">
+    <meta name="" content="HTML, ASP, JS, META, animales perdidos">
+    <link rel="stylesheet" href="estilos/compilado.css" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><B><FONT COLOR="white">Animales perdidos</FONT></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="Animal perdido.html"><B><FONT COLOR="white">¿Perdiste tu mascota?</FONT></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Sobre nosotros.html"><B><FONT COLOR="white">Sobre nosotros</FONT></a>
+            </li>
+          </ul>
+           <form class="d-flex">
+            <input class="form-control me-2" type="search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+           </form>
+        </div>
+      </div>
+    </nav>
+   </head>
   <body>
     <div class="encabezado">
-      <div class="title">Sobre nuestro objetivo</div>
       <img class="logo" 
-          src="animales perdidos logo.jpeg"
+          src="fotos/logolostpets.PNG"
           width="400"
           height="300"
       />
-      <input type="search" name="" id="" placeholder="Buscar">
     </div>
-     <P>Nuestro objetivo es que las mascotas que se escapen de sus dueños puedan volver con ellos, tratamos de mejorar dia y dia y nos gustaria sugerencias y opiniones por las redes, muchas gracias por estar aca y aportar y a las familias
+    <br><br>
+     <P class="text-center">Nuestro objetivo es que las mascotas que se escapen de sus hogares puedan regresar. <br> Buscamos mejorar día a día, recibimos sugerencias y opiniones por las redes sociales. <br> ¡Muchas gracias por estar acá y aportar a la comunidad de Lost Pets!
      </P>
-    <section class="animal-encontrado">
-      <div>
-        <p><input type="checkbox" name="" id=""> Es este el animal encontrado?</p>
-        <img src="./fotos/images4.jfif" alt="luna" width="400" height="400">
-      </div>
-    </section>
     <div class="down">
-     <aling center>
-        <a href="Animal perdido.html">Perdiste tu animal?</a>
-     </aling center>
+      <aling center>
+        <a href="Animal perdido.html">¿Perdiste tu mascota?</a>
+      </aling center>
     </div>
-    <section class="footer2">
-      <a href="index.html">Cancelar
-      </a>
-      <a href="index.html">Listo!
-      </a>
-    </section>
   </body>
 </html>
