--- a/Animal encontrado Perro 8.html
+++ b/Animal encontrado Perro 8.html
@@ -41,15 +41,15 @@
           height="200"
       />
     </div>
-     <P><B><FONT COLOR="white">Indique como se llama la mascota perdida y una foto con una breve descripción.</FONT></P>
+     <P><B><FONT COLOR="white">Indicá si es la mascota perdida y llena los siguientes datos.</FONT></P>
     <section class="animal-encontrado">
       <div>
-        <p><input type="checkbox" name="" id=""> ¿Es este la mascota encontrada?</p>
+        <p><input type="checkbox" name="" id=""> ¿Es esta la mascota encontrada?</p>
         <img src="./fotos/dog.jpg" alt="luna" width="400" height="400">
       </div>
       <div>
         <p> Fecha:<input type="date" name="" id="">
-        <input type="checkbox" name="" id=""> ¿Lo tiene usted?</p>
+        <input type="checkbox" name="" id=""> ¿Lo tenes vos?</p>
         <p>¿Donde lo vio?</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.09945338891!2d-58.45813468463305!3d-34.601646564895844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x513dac7106531a27!2zMzTCsDM2JzA1LjkiUyA1OMKwMjcnMjEuNCJX!5e0!3m2!1ses-419!2sar!4v1646263722966!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <p>Fue encontrado entre las calles<input type="" name="" id=""></p>
