--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        <div><img src="./fotos/Jerry.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Perro 2.html">
-       <div><img src="./fotos/hijademimi.jpg" alt="mimi" class="img-animal" ></div>
+       <div><img src="./fotos/tin.jpg" alt="mimi" class="img-animal" ></div>
       </a>
       <a href="Animal encontrado Perro 3.html">
        <div><img src="./fotos/images (2).jfif" alt="mimi" class="img-animal" ></div>
