--- a/Animal encontrado.html
+++ b/Animal encontrado.html
@@ -52,7 +52,7 @@
       <div>
         <p> Fecha:<input type="date" name="" id="">
         <input type="checkbox" name="" id=""> ¿Lo tenes vos?</p>
-        <p>¿Donde lo vio?</p>
+        <p>¿Dónde lo viste?</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.09945338891!2d-58.45813468463305!3d-34.601646564895844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x513dac7106531a27!2zMzTCsDM2JzA1LjkiUyA1OMKwMjcnMjEuNCJX!5e0!3m2!1ses-419!2sar!4v1646263722966!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <p>Fue encontrado entre las calles<input type="" name="" id=""></p>
       </div>
