--- a/Animal encontrado Perro 4.html
+++ b/Animal encontrado Perro 4.html
@@ -12,17 +12,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><B><FONT COLOR="white">Animales perdidos</FONT></a>
+        <a class="navbar-brand" href="index.html">Animales perdidos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Animal perdido.html"><B><FONT COLOR="white">¿Perdiste tu mascota?</FONT></a>
+              <a class="nav-link active" aria-current="page" href="Animal perdido.html">¿Perdiste tu mascota?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Sobre nosotros.html"><B><FONT COLOR="white">Sobre nosotros</FONT></a>
+              <a class="nav-link" href="Sobre nosotros.html">Sobre nosotros</a>
             </li>
           </ul>
            <form class="d-flex">
@@ -41,7 +41,7 @@
           height="200"
       />
     </div>
-     <P><B><FONT COLOR="white">Indicá si es la mascota perdida y llena los siguientes datos.</FONT></P>
+     <P>Indicá si es la mascota perdida y llena los siguientes datos.</P>
     <section class="animal-encontrado">
       <div>
         <p><input type="checkbox" name="" id=""> ¿Es esta la mascota encontrada?</p>
@@ -50,7 +50,7 @@
       <div>
         <p> Fecha:<input type="date" name="" id="">
         <input type="checkbox" name="" id=""> ¿¿Lo tenes vos?</p>
-        <p>¿¿Dónde lo viste?</p>
+        <p>¿</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.09945338891!2d-58.45813468463305!3d-34.601646564895844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x513dac7106531a27!2zMzTCsDM2JzA1LjkiUyA1OMKwMjcnMjEuNCJX!5e0!3m2!1ses-419!2sar!4v1646263722966!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <p>Fue encontrado entre las calles<input type="" name="" id=""></p>
       </div>
