--- a/Animal perdido.html
+++ b/Animal perdido.html
@@ -19,10 +19,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Animal perdido.html"><B><FONT COLOR="white">¿Perdiste tu mascota?</FONT></a>
+              <a class="nav-link active" aria-current="page" href="Animal perdido.html">¿Perdiste tu mascota?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Sobre nosotros.html"><B><FONT COLOR="white">Sobre nosotros</FONT></a>
+              <a class="nav-link" href="Sobre nosotros.html">Sobre nosotros</a>
             </li>
           </ul>
            <form class="d-flex">
@@ -41,7 +41,7 @@
           height="200"
       />
     </div>
-    <P><B><FONT COLOR="white">Indicá el nombre de la mascota perdida y adjuntá una foto con una breve descripción.</FONT></P>
+    <P>Indicá el nombre de la mascota perdida y adjuntá una foto con una breve descripción.</P>
     <section class="animal-perdido">
       <div>
         <input type="file" name="" id="">
