--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><B><FONT COLOR="white">Animales perdidos</FONT></a>
+        <a class="navbar-brand" href="index.html">Animales perdidos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Animal perdido.html"><B><FONT COLOR="white">¿Perdiste tu mascota?</FONT></a>
+              <a class="nav-link active" aria-current="page" href="Animal perdido.html">¿Perdiste tu mascota?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Sobre nosotros.html"><B><FONT COLOR="white">Sobre nosotros</FONT></a>
+              <a class="nav-link" href="Sobre nosotros.html">Sobre nosotros</a>
             </li>
           </ul>
            <form class="d-flex">
@@ -41,9 +41,9 @@
           src="fotos/logolostpets.PNG"
       />
     </div>
-    <p class="texto-blanco"><B><FONT COLOR="white">Si reconocés alguna mascota por favor avisanos que se lo informaremos al dueño, después ubicá la zona donde identificaste a la mascota.</FONT></a></P>
+    <p class="texto-blanco">Si reconocés alguna mascota por favor avisanos que se lo informaremos al dueño, después ubicá la zona donde identificaste a la mascota.</a></P>
     <div class="left"> 
-      <p><B><FONT COLOR="white"</FONT></a></p>
+      <p><B><FONT COLOR="white"</a></p>
     </div>
     <section class="mascotas">
       <a href="Animal encontrado mimi.html">
@@ -70,7 +70,7 @@
       <a href="Animal encontrado Gato1.html">
        <div><img src="./fotos/gatomalafoto.jpeg" alt="mimi" class="img-animal"></div>
       </a>
-      <a href="Animal encontrado no recuerdo el nombre jajjajaja.html">
+      <a href="Animal encontrado suricata.html">
        <div><img src="./fotos/hipertextual-que-ningun-animal-tiene-tres-patas-2019533984.jpg" alt="mimi" class="img-animal"></div>
       </a>
       <a href="Animal encontrado Gato2.html">
