--- a/Animal encontrado Gato1.html
+++ b/Animal encontrado Gato1.html
@@ -12,17 +12,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><B><FONT COLOR="white">Animales perdidos</FONT></a>
+        <a class="navbar-brand" href="index.html">Animales perdidos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Animal perdido.html"><B><FONT COLOR="white">¿Perdiste tu mascota?</FONT></a>
+              <a class="nav-link active" aria-current="page" href="Animal perdido.html">¿Perdiste tu mascota?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Sobre nosotros.html"><B><FONT COLOR="white">Sobre nosotros</FONT></a>
+              <a class="nav-link" href="Sobre nosotros.html">Sobre nosotros</a>
             </li>
           </ul>
            <form class="d-flex">
@@ -42,7 +42,7 @@
       />
 
     </div>
-     <P><B><FONT COLOR="white">Indicá si es la mascota perdida y llena los siguientes datos.</FONT></P>
+     <P>Indicá si es la mascota perdida y llena los siguientes datos.</P>
     <section class="animal-encontrado">
       <div>
         <p><input type="checkbox" name="" id=""> ¿Es esta la mascota encontrada?</p>
