--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+    <font COLOR="white"></font>
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Animales perdidos</a>
@@ -42,9 +43,6 @@
       />
     </div>
     <p class="texto-blanco">Si reconocés alguna mascota por favor avisanos que se lo informaremos al dueño, después ubicá la zona donde identificaste a la mascota.</a></P>
-    <div class="left"> 
-      <p><B><FONT COLOR="white"</a></p>
-    </div>
     <section class="mascotas">
       <a href="Animal encontrado mimi.html">
        <div><img src="./fotos/IMG_20220106_183933.jpg" alt="mimi" class="img-animal"></div>
