--- a/Animal encontrado Perro 5.html
+++ b/Animal encontrado Perro 5.html
@@ -41,7 +41,7 @@
           height="200"
       />
     </div>
-     <P>Indicá si es la mascota perdida y llena los siguientes datos.</P>
+     <P class="texto-blanco">Indicá si es la mascota perdida y llena los siguientes datos.</P>
     <section class="animal-encontrado">
       <div>
         <p><input type="checkbox" name="" id=""> ¿Es esta la mascota encontrada?</p>
